[package]
name = "memflow-native"
version = "0.2.5"
authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
edition = "2021"
description = "System call based proxy-OS for memflow"
documentation = "https://docs.rs/memflow-native"
readme = "README.md"
homepage = "https://memflow.io"
repository = "https://github.com/memflow/memflow-native"
license = "MIT"
keywords = ["memflow", "introspection", "memory", "dma"]
categories = ["api-bindings", "memory-management", "os"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
goblin = "0.8"
itertools = "0.13"
libc = { version = "0.2" }
log = "0.4"
memflow = { version = "0.2", features = ["plugins", "goblin"] }

# we keep procfs on version 0.15.x because it does not build properly with the backtrace on 0.16.x
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.15", features = ["backtrace"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
	"Wdk_System_Threading",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Kernel",
	"Win32_System_Memory",
	"Win32_System_ProcessStatus",
	"Win32_System_Threading",
	"Win32_UI",
	"Win32_UI_Input",
	"Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
mac-sys-info = "0.1"
libproc = "0.14"
mach2 = "0.4"

[features]
default = ["plugins"]
plugins = ["memflow/plugins"]
unstable_goblin_lossy_macho = ["memflow/unstable_goblin_lossy_macho"]
